--- a/movie.html
+++ b/movie.html
@@ -4,11 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/lumen.css">
+    <link rel="stylesheet" href="../proyectos_web/css/lumen.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <title>Movies</title>
 </head>
 <body>
+
+   <header>
+    <div class="container">
+        <div class="row">
+            <div class="col s12">
+                <h1 class="center-align title">Technology 2020</h1>
+
+                <div class="carousel center-align">
+
+                  <div class="carousel-item">
+                    <h2 class="subtitle">Technology</h2>
+                    <div class="line-division"></div>
+                    <p class="text">Tech</p>
+                    <img src="../proyectos_web/img/Cover.png">
+
+                  </div>
+
+                  
+
+                </div>
+            </div>
+        </div>
+    </div>
+   </header>
     
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <script src="javascript/movies.js"></script>
 </body>
