--- a/movie.html
+++ b/movie.html
@@ -22,7 +22,7 @@
                     <h2 class="subtitle">Technology</h2>
                     <div class="line-division"></div>
                     <p class="text">Tech</p>
-                    <img src="../proyectos_web/img/Cover.png">
+                    <img src="./img/dona-01.jpg">
 
                   </div>
 
