--- a/boton.html
+++ b/boton.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/colores.css">
+    <link rel="stylesheet" href="./css/colores.css">
     <title>Document</title>
 </head>
 <body>
+
+    <p id="man">Malo!</p>
     
 
     <script src="./javascript/black.js"></script>
