--- a/event.html
+++ b/event.html
@@ -37,6 +37,10 @@
          <input type="submit" value="Enviar">
 
         </form>
+
+        <span class="boton" id="boton">Agregar</span>
     </div>
 </body>
+
+<script src="../proyectos_web/javascript/events.js"></script>
 </html>
