--- a/event.html
+++ b/event.html
@@ -39,6 +39,9 @@
         </form>
 
         <span class="boton" id="boton">Agregar</span>
+         <br>
+         <span class="textos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla iste optio illo veritatis et, blanditiis laborum ab qui excepturi nihil fugit ratione est tempora nostrum perspiciatis suscipit neque fugiat placeat.</span>
+       
     </div>
 </body>
 
