--- a/event.html
+++ b/event.html
@@ -30,8 +30,8 @@
         
         <div class="input-group radio-buttons disabled">
           <input type="radio" name="color" id="verde" disabled> <label for="verde">Verde</label> 
-          <input type="radio" name="color" id="azul"><label for="azul">Azul</label>
-          <input type="radio" name="otros" id="otros"><label for="otros">Otros</label>
+          <input type="radio" name="color" id="azul" disabled><label for="azul">Azul</label>
+          <input type="radio" name="otros" id="otros" disabled><label for="otros">Otros</label>
         </div>
    
          <input type="submit" value="Enviar">
