--- a/event.html
+++ b/event.html
@@ -43,6 +43,11 @@
          <span class="textos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla iste optio illo veritatis et, blanditiis laborum ab qui excepturi nihil fugit ratione est tempora nostrum perspiciatis suscipit neque fugiat placeat.</span>
        
     </div>
+
+     <div class="hello">
+         <span class="hellos" id="saludo">HOLA!</span>
+     </div>
+
 </body>
 
 <script src="../proyectos_web/javascript/events.js"></script>
