--- a/texto.html
+++ b/texto.html
@@ -11,7 +11,9 @@
 
     <div class="container">
      <header >
-      <a href="#" class="logo"> HomePet</a>
+      <a href="#" class="logo">
+          <img src="./img/undraw_voice_assistant_nrv7.svg">
+      </a>
 
       <nav class="mains">
         <a href="#">Inicio</a>
