--- a/texto.html
+++ b/texto.html
@@ -28,12 +28,14 @@
          </div>
 
          <div class="contenedor-texto">
-           <h2 class="title">
-               <span class="typed"></span>
+
+             <h2 class="title"><span class="typed">
+            </span>
+                   
            </h2>
-           <div class="titles" id="cadenas-texto">
-            <p>Traé a HomePets <br> a tu <i class="mascota">Perros</i></p>
-            <p>Traé a HomePets <br>a tu <i class="mascota">Gatos</i></p>
+           <div class="title" id="cadenas-texto">
+            <p>Traé a HomePets <br> a tu <i class="mascota">Perro</i></p>
+            <p>Traé a HomePets <br>a tu <i class="mascota">Gato</i></p>
             <p>Traé a HomePets <br>s tu <i class="mascota">Pez</i> </p>
            </div>
 
@@ -45,6 +47,7 @@
         </div>
      </main>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script src="./javascript/text.js"></script>
     
