--- a/parallax.html
+++ b/parallax.html
@@ -8,7 +8,58 @@
     <title>Parallax</title>
 </head>
 <body>
+    <header>
+        <nav></nav>
+    </header>
+    <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus rem voluptates obcaecati ipsa nesciunt veritatis, iure distinctio cum, labore facilis odit id illum earum mollitia nostrum cumque, tenetur officia odio.
+    Cupiditate, nihil. Cumque ratione maiores minus ad cum voluptatem corrupti culpa nihil eum a dolores possimus, repellat dolore voluptatibus nesciunt veniam. Nihil quia dignissimos, omnis temporibus consectetur tempore ut debitis!
+    Molestiae error assumenda quis dicta sed, impedit, eaque quas aperiam commodi et tempore, illo minima recusandae laboriosam doloremque repellat accusantium nam nostrum porro! Fuga suscipit eaque aperiam porro voluptates iusto!
+    Ipsam fuga, repudiandae consectetur odio recusandae alias omnis iste perspiciatis animi maxime velit, fugit doloremque voluptatum incidunt, distinctio eos sit iure tenetur minus. Mollitia accusamus minus quas molestiae suscipit amet.
+    Facere iure eaque nisi alias rerum optio accusamus in aperiam aspernatur id cumque nostrum, autem ab totam aliquid placeat quae, temporibus aliquam! Sequi voluptates tempora error praesentium debitis, sed impedit.
+    Voluptatum, nostrum recusandae. Maxime architecto dolores hic enim sapiente! Nihil fugit ea reiciendis quaerat ipsum, dolorem animi a dolor aliquid magni rerum eos eius adipisci natus repudiandae, unde nobis voluptatibus.
+    Pariatur magni sunt, ad iusto cumque aliquid soluta ipsam dolorem aliquam aspernatur mollitia eligendi rerum veniam omnis enim vel temporibus neque totam eos ea ratione voluptates? Est dolorem tempore alias.
+    Voluptatibus, aut, similique nam enim voluptatem error odit sed cumque natus porro ea fugit eum quasi sapiente minima ipsa velit numquam, nesciunt rerum fuga animi nisi ipsam vel quos? Officia!
+    Earum architecto fugiat quas autem omnis a, animi repudiandae suscipit voluptatum adipisci dignissimos, eligendi odio impedit dolore ab, eos voluptates ipsam quae quos ducimus laboriosam modi. Ad laudantium sapiente veritatis!</div>
+
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi totam magni natus praesentium dolor porro aliquid cupiditate pariatur similique, modi vero facere rerum magnam quaerat facilis eos quisquam possimus dolorum!
+        Minus eum at necessitatibus nesciunt illum odit adipisci explicabo, exercitationem ipsum ducimus iste dolor molestias modi, quae porro. In est nostrum animi ut ex totam illo corrupti libero placeat sapiente.
+        Fuga commodi laborum velit cupiditate aut aspernatur non facilis nisi. Reprehenderit quibusdam quam et. In animi quasi quo quam libero dolorum deserunt quia laudantium earum aliquid? Dolorum molestiae deleniti laborum.
+        Aut sunt ducimus fuga voluptates hic amet velit assumenda impedit unde, distinctio vero accusamus, at totam dignissimos placeat esse! Dolorum officia consequatur a laborum nam placeat magni fugiat vero! Rem.
+        Nisi, esse cum. Incidunt tenetur natus distinctio molestiae labore ab quaerat tempora. Blanditiis quidem error, eveniet illo enim alias quae fugiat at atque sapiente dignissimos nemo incidunt. Voluptas, aliquam ea.
+        Quae optio expedita quidem exercitationem harum eaque vel nihil illo minima iure temporibus necessitatibus repellat explicabo enim consequuntur, inventore in! Harum, repudiandae. Nostrum, deserunt praesentium ea sapiente deleniti voluptatem reprehenderit.
+        Tenetur consequatur vel quasi provident eius earum delectus dolores recusandae molestias accusamus praesentium ut doloribus dignissimos sunt cupiditate, dolor voluptate! Quo autem minus numquam corporis blanditiis nesciunt sed! Natus, porro.
+        Voluptas delectus incidunt blanditiis animi possimus dicta numquam id nam quis aliquam neque in fugit, repudiandae vero ipsum nostrum suscipit ex architecto earum recusandae at consequatur eligendi a est! Culpa!
+        Recusandae, doloremque hic. Aperiam doloribus similique quae pariatur voluptate consectetur, ipsa vitae voluptatum eaque? Dolore dicta nobis perferendis, corrupti culpa quisquam cupiditate architecto deleniti eveniet qui recusandae ducimus iure rerum.
+    </div>
+
+    <section class="container">
+      <div class="parallax">
+
+      </div>
+    </section>
+
+    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi quas quos fugiat sit voluptatum veritatis molestias, voluptate alias ratione corrupti odit maxime perspiciatis exercitationem saepe possimus quibusdam amet. In, minima!
+    Rem, non! Odio illum quae excepturi pariatur debitis fugit atque ab mollitia ratione nulla et id deleniti laborum at sit asperiores, odit soluta sapiente natus. Sunt a voluptatum labore ex.
+    Assumenda atque consectetur accusamus, sit facere excepturi ipsam minima, quas iure perferendis dicta quis necessitatibus itaque officia sed saepe rem. Dolorem nostrum dicta maxime. Dicta repudiandae cupiditate eveniet illo doloremque!
+    Ipsam eligendi eius consectetur doloribus ratione saepe, aut vitae expedita quasi adipisci officiis. Sed accusamus non, eius ut inventore nisi? Ab dignissimos corrupti illo placeat delectus quis quibusdam. Maiores, tenetur.
+    Quibusdam doloribus, eaque sint nam fugiat soluta saepe labore optio non, aspernatur rem voluptatem omnis temporibus possimus assumenda explicabo. Alias animi illum, quis cum sequi perspiciatis optio unde nostrum iure!
+    Eveniet consectetur voluptates alias maiores nesciunt vel ipsum dolore, quo dolorum omnis odio reiciendis praesentium libero voluptate laudantium in minus magni minima. Corrupti temporibus nisi dignissimos expedita corporis enim itaque.
+    Odio totam delectus velit debitis illo ex, quia reprehenderit laboriosam quidem est sed vel qui quibusdam sint temporibus officiis quasi assumenda nihil. Eaque adipisci error quaerat libero quibusdam id similique.
+    Aliquam nobis eius debitis. Debitis, alias illum, tempore iusto commodi maxime nostrum laborum odit, cupiditate vero magnam quo iure facere. Illo laboriosam quod dolor fugiat expedita optio hic, perferendis maiores?
+    Laboriosam a non consequuntur, quis, incidunt unde ipsa soluta corrupti maxime, deserunt atque! Tempora inventore error eum sed at voluptatum, provident quaerat a maiores, eos alias obcaecati sequi cumque culpa.</div>
     
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est quis libero maiores. Dignissimos, eos! Enim quam doloremque, dignissimos, placeat blanditiis, incidunt iusto nemo veniam quis quaerat ullam quo sed.
+    Alias ratione facere, nam praesentium blanditiis ipsam voluptatum officiis corrupti ex culpa autem non enim neque vel quas eligendi ducimus laboriosam nobis animi quasi rem consequatur reprehenderit inventore perferendis. Deserunt?
+    Ratione consectetur, debitis amet inventore quas perferendis in quod minima quisquam architecto odio veritatis voluptate, id dolores, officiis nisi est labore et? Adipisci, inventore est officiis incidunt impedit tenetur architecto!
+    Harum quo ad a quod repellat expedita accusantium, incidunt alias sint non iure tempore hic repudiandae perspiciatis recusandae odit cum quaerat est tenetur labore sequi illum ex? Aut, velit nesciunt!
+    Molestiae reiciendis veritatis eum, ab vitae eligendi voluptatem vero delectus aliquid, maiores quam animi magni odit, sunt a. Autem quo et iusto modi, pariatur veritatis. Soluta assumenda magni dignissimos minima.
+    Est veniam delectus debitis pariatur cumque, ad excepturi doloribus ut laborum! Provident nobis, similique molestias asperiores dignissimos impedit ad, tempore illo consectetur nisi quasi laboriosam possimus facere ab reiciendis blanditiis.
+    Nulla ipsum iusto eaque, molestiae itaque iste quos omnis magni! Nostrum, ab? Laudantium eius in maiores eaque, quae, impedit reiciendis mollitia repellendus dolores est, cumque iure tenetur sit molestiae veritatis?
+    Nostrum quo cum cumque reprehenderit quia sint, saepe sunt tenetur neque atque numquam nemo dolore. Aliquid vitae ab architecto nam dolores accusantium blanditiis, quas voluptas officiis atque ducimus et enim.
+    Consequatur, nobis dolor incidunt omnis eaque fugit nulla vero dolores recusandae eveniet cumque enim adipisci sapiente, consectetur earum doloremque, aspernatur dolorem molestias eligendi temporibus. Ducimus veritatis quis similique laudantium deleniti.</div>
+  
+    <footer></footer>
 
     <script src="./javascript/app.js"></script>
 </body>
