--- a/parallax.html
+++ b/parallax.html
@@ -35,8 +35,8 @@
 
     <section class="container">
       <div class="parallax">
-
-      </div>
+    </div>
+    <h1 class="title">Parallax</h1>
     </section>
 
     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi quas quos fugiat sit voluptatum veritatis molestias, voluptate alias ratione corrupti odit maxime perspiciatis exercitationem saepe possimus quibusdam amet. In, minima!
