--- a/scroll.html
+++ b/scroll.html
@@ -36,6 +36,7 @@
    
     <section class="container">
      <div class="parallax"></div>
+     <h1 class="title">PARALLAX</h1>
     </section>
 
     <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, provident rerum corrupti quibusdam aperiam nam, dicta et asperiores eveniet aspernatur rem labore iste deserunt vero doloribus quae fuga? Velit, at.
