--- a/move.html
+++ b/move.html
@@ -46,13 +46,13 @@
         </div>
     </section>
 
-    <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita perferendis delectus modi soluta minima dolorum doloribus. Nihil illo eaque ex. Perspiciatis nam modi beatae, officiis ad non explicabo. Illum, corrupti.
+    <div class="animation">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita perferendis delectus modi soluta minima dolorum doloribus. Nihil illo eaque ex. Perspiciatis nam modi beatae, officiis ad non explicabo. Illum, corrupti.
     Sit saepe adipisci blanditiis quasi fugit dolores praesentium expedita? Architecto, blanditiis eveniet ipsam placeat autem dolore animi! Doloremque pariatur soluta molestias voluptatem praesentium. Quam cupiditate et voluptatem quaerat, corrupti animi.
     Culpa iusto quasi laboriosam perferendis, assumenda architecto eum harum error modi labore laborum aperiam possimus veniam odio impedit alias vel velit, eligendi dolor, quas nemo distinctio expedita officia qui. Nesciunt?
     Esse repudiandae cum dolore eum consequatur sapiente minus porro aperiam quis, tempore, delectus deleniti eaque ipsum dolores ratione enim excepturi molestiae deserunt! Vitae est perferendis magnam numquam inventore dolore nulla!
     Ab vitae quibusdam voluptatum, ipsum, explicabo nobis deserunt fugiat sint quaerat a architecto laborum ipsam fuga voluptas minus odit consectetur magnam voluptatibus doloribus quis. Ratione hic rerum eaque eligendi quaerat.</div>
    
-   <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis natus similique doloremque, excepturi quis, voluptatum maxime numquam eveniet, quisquam magnam quae. Ex, animi ducimus? Ullam nisi aliquid amet accusamus assumenda.
+   <div class="animation">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis natus similique doloremque, excepturi quis, voluptatum maxime numquam eveniet, quisquam magnam quae. Ex, animi ducimus? Ullam nisi aliquid amet accusamus assumenda.
    Doloremque voluptates vel illo ipsum nam. Vero nisi hic error quod, dolorem iusto perspiciatis illum nobis. Distinctio minus repellat iste hic nisi atque, illum inventore aperiam aliquid, tempora mollitia labore?
    Nostrum, harum suscipit autem odit deleniti eius eaque perspiciatis voluptatem rerum! Illo numquam asperiores ad, inventore assumenda dolore rem molestias quaerat quos nam nihil deserunt aut fugit ipsam. Dicta, libero.
    Reiciendis, quos. Provident molestiae nobis iure, corrupti rem quo odio eum maiores a fugit culpa optio rerum tempora minima minus cumque! Libero exercitationem commodi eum aspernatur amet esse beatae perferendis.
