--- a/carrusel.html
+++ b/carrusel.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="title">
-        <h1>Vanilla Javascript Carousel</h1>
+        <h1> Javascript Carousel</h1>
     </div>
 
     <div class="carousel-container">
